syntax = "proto3";
package cas.proto;

message BotArm{
    repeated bytes data_buffer = 1;
}
